--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/assets/layout-rtl-backup.css" />
-    <link rel="stylesheet" href="/assets/app-dark.css" />
-    <link rel="stylesheet" href="/assets/app.css" />
+    <link rel="stylesheet" custom="true" href="/assets/layout-rtl-backup.css" />
+    <link rel="stylesheet" custom="true" href="/assets/app-dark.css" />
+    <link rel="stylesheet" custom="true" href="/assets/app.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />  
     <style>
       * {
@@ -22,19 +22,33 @@
         border-bottom: 2px solid blue;
         color: blue !important;
       }
+      .sidebar-wrapper {
+        top: 50px;
+        background-color: #ffffff00 !important;
+      }
+      .sidebar-wrapper .menu .submenu .submenu-item a {
+        padding: .7rem 1.3rem;
+      }
     </style>
   </head>
   <body>
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+      <symbol id="check-circle-fill" viewBox="0 0 16 16">
+        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+      </symbol>
+      <symbol id="info-fill" viewBox="0 0 16 16">
+        <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+      </symbol>
+      <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
+        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+      </symbol>
+    </svg>    
     <script src="assets/initTheme.js"></script>
     <div id="app" style="background-color: #F0F2F5;">
       <div id="header"></div>
       <div id="sidebar">
         <div class="sidebar-wrapper active">
-          <div class="sidebar-header position-relative">
-            <div class="d-flex align-items-center mb-3">
-              <img src="assets/logo.png" alt="Logo" height="40">
-              <h1 class="fs-5 m-0 ms-2">StudentConnect</h1>
-            </div>
+          <div class="sidebar-header">
             <div class="d-flex justify-content-between align-items-center">
               <div class="logo">
                 <a href="index.html" class="d-flex align-items-center">
@@ -72,7 +86,16 @@
                 </a>
                 <ul class="submenu">
                   <li class="submenu-item">
-                    <a href="javascript:void(0)" class="submenu-link">Sub Menu</a>
+                    <a href="javascript:void(0)" class="submenu-link">Dashboard</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Lowongan Beasiswa</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Beasiswa Saya</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Surat & Permohonan</a>
                   </li>
                 </ul>
               </li>
@@ -84,7 +107,13 @@
                 </a>
                 <ul class="submenu">
                   <li class="submenu-item">
-                    <a href="javascript:void(0)" class="submenu-link">Sub Menu</a>
+                    <a href="javascript:void(0)" class="submenu-link">Dashboard</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Lowongan Magang</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Kegiatan Saya</a>
                   </li>
                 </ul>
               </li>
@@ -96,7 +125,13 @@
                 </a>
                 <ul class="submenu">
                   <li class="submenu-item">
-                    <a href="javascript:void(0)" class="submenu-link">Sub Menu</a>
+                    <a href="javascript:void(0)" class="submenu-link">Dashboard</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Lowongan</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Kegiatan Saya</a>
                   </li>
                 </ul>
               </li>
@@ -111,10 +146,10 @@
                     <a href="#kegiatan-saya" class="navBtn submenu-link">Kegiatan Saya</a>
                   </li>
                   <li class="submenu-item">
-                    <a href="#dana-hibah" class="navBtn submenu-link">Dana Hibah</a>
+                    <a href="javascript:void(0)" class="navBtn submenu-link">Dana Hibah</a>
                   </li>
                   <li class="submenu-item">
-                    <a href="#jadwal-skim" class="navBtn submenu-link">Jadwal SKIM</a>
+                    <a href="javascript:void(0)" class="navBtn submenu-link">Jadwal SKIM</a>
                   </li>
                 </ul>
               </li>
@@ -126,7 +161,7 @@
                 </a>
                 <ul class="submenu">
                   <li class="submenu-item">
-                    <a href="javascript:void(0)" class="submenu-link">Sub Menu</a>
+                    <a href="javascript:void(0)" class="submenu-link">Berkas Saya</a>
                   </li>
                 </ul>
               </li>
@@ -138,7 +173,49 @@
                 </a>
                 <ul class="submenu">
                   <li class="submenu-item">
-                    <a href="javascript:void(0)" class="submenu-link">Sub Menu</a>
+                    <a href="javascript:void(0)" class="submenu-link">Buku</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">HAKI</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Karya Ilmiah</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="#portofolio-kegiatan" class="navBtn submenu-link">Kegiatan</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="#portofolio-kompetisi" class="navBtn submenu-link">Kompetisi</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Magang</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Olahraga</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">ORMAWA</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Pelatihan</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Pengabdian Masyarakat</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Pertukaran Mahasiswa</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Sertifikasi</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Studi Independen</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Vaksinasi COVID-19</a>
+                  </li>
+                  <li class="submenu-item">
+                    <a href="javascript:void(0)" class="submenu-link">Wirausaha</a>
                   </li>
                 </ul>
               </li>
@@ -161,8 +238,8 @@
           </div>
         </div>
       </div>
-      <div id="main">
-        <div id="content"></div>
+      <div id="main" class="pt-5">
+        <div id="content" class="mt-4"></div>
         <div id="footer"></div>
       </div>
     </div>
