update bagian kewirausahaan

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       }
       .sidebar-wrapper {
         top: 50px;
-        background-color: #ffffff00 !important;
+        background-color: #F0F2F5 !important;
       }
       .sidebar-wrapper .menu .submenu .submenu-item a {
         padding: .7rem 1.3rem;
@@ -146,10 +146,10 @@
                     <a href="#kegiatan-saya" class="navBtn submenu-link">Kegiatan Saya</a>
                   </li>
                   <li class="submenu-item">
-                    <a href="javascript:void(0)" class="navBtn submenu-link">Dana Hibah</a>
+                    <a href="javascript:void(0)" class="submenu-link">Dana Hibah</a>
                   </li>
                   <li class="submenu-item">
-                    <a href="javascript:void(0)" class="navBtn submenu-link">Jadwal SKIM</a>
+                    <a href="#jadwal-skim" class="navBtn submenu-link">Jadwal SKIM</a>
                   </li>
                 </ul>
               </li>
