--- a/pages/kegiatan-saya.html
+++ b/pages/kegiatan-saya.html
@@ -28,10 +28,10 @@
                 <div class="d-flex py-3 px-4">
                   <img src="assets/item.png" alt="Icon Item" width="50" height="50" class="me-3">
                   <div class="d-flex flex-column align-items-start">
-                    <h4 class="mb-1">ITS Expo 2023</h4>
-                    <p class="mb-1">ITS Youth Technopreneur 2023</p>
-                    <p class="mb-1">Jabatan: Ketua 2023</p>
-                    <span class="bg-secondary bg-opacity-25 px-3 py-1 rounded-1 mb-3">
+                    <h6 class="mb-1">ITS Expo 2023</h6>
+                    <small class="mb-1">ITS Youth Technopreneur 2023</small>
+                    <small class="mb-1">Jabatan: Ketua 2023</small>
+                    <span class="bg-secondary bg-opacity-25 px-3 rounded-1 mb-3">
                       <small>Draft</small>
                     </span>
                     <a href="#detail-kegiatan" class="navBtn px-4 py-0 fw-bold btn btn-outline-primary rounded-2">Lihat Detail</a>
