--- a/pages/tambah-ajuan.html
+++ b/pages/tambah-ajuan.html
@@ -50,8 +50,35 @@
           </div>
           <h5 class="mb-3 mt-4">Informasi Pendanaan</h5>
           <div class="form-floating mb-3">
+            <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+              <option selected>Ketik nominal angka yang akan diajukan</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+            <label for="floatingSelect">Pengajuan Dana</label>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Nama Bank</label>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Nomor Rekening</label>
+              </div>
+            </div>
+          </div>
+          <div class="form-floating mb-4">
             <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Pengajuan Dana</label>
+            <label for="floatingInput">Nama Pemilik Rekening</label>
+          </div>
+          <div class="float-end">
+            <button class="btn">Batal</button>
+            <button class="btn btn-primary">Simpan</button>
           </div>
         </div>
       </div>
