--- a/pages/kegiatan-saya.html
+++ b/pages/kegiatan-saya.html
@@ -8,15 +8,15 @@
       <div class="card">
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-center mb-3">
-            <div>
-              <a id="tab1" class="tab-btn active pb-2 me-4 fw-bold text-secondary">
+            <div class="d-flex flex-column flex-sm-row">
+              <a id="tab1" class="tab-btn active pb-2 me-4 fw-bold text-secondary mb-2 mb-sm-0">
                 Kegiatan Wirausaha
               </a>
               <a id="tab2" class="tab-btn pb-2 fw-bold text-secondary">
                 Keanggotaan
               </a>
             </div>
-            <a href="#tambah-ajuan" class="navBtn btn btn-primary rounded"><i class="bi bi-plus-lg"></i> Tambah Ajuan</a>
+            <a href="#tambah-ajuan" class="navBtn btn btn-primary rounded fw-semibold"><i class="bi bi-plus-lg"></i> <span class="d-none d-sm-inline">Tambah Ajuan</span></a>
           </div>
           <div id="content1" class="tab-content">
             <!-- <div class="text-center py-5 border rounded-3">
