--- a/pages/tambah-ajuan-kompetisi.html
+++ b/pages/tambah-ajuan-kompetisi.html
@@ -14,19 +14,19 @@
           <div class="mb-5">
             <h5 class="mb-3">Informasi Kompetisi</h5>
             <div class="row">
-              <div class="col-6">
+              <div class="col-sm-6 col-12">
                 <div class="form-floating mb-3">
                   <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
                   <label for="floatingInput">Nama Kompetisi</label>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-6 col-12">
                 <div class="form-floating mb-3">
                   <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
                   <label for="floatingInput">Penyelenggara Kompetisi</label>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-6 col-12">
                 <div class="form-floating mb-3">
                   <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
                     <option selected>Pilih atau ketik jenis kompetisi</option>
@@ -37,7 +37,7 @@
                   <label for="floatingSelect">Jenis Kompetisi</label>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-6 col-12">
                 <div class="form-floating mb-3">
                   <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
                     <option selected>Pilih salah satu</option>
@@ -54,25 +54,25 @@
                   <label for="floatingInput">Alamat Web Kompetisi</label>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-6 col-12">
                 <div class="form-floating mb-3">
                   <input type="date" class="form-control" id="floatingInput" placeholder="name@example.com">
                   <label for="floatingInput">Tanggal Mulai</label>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-6 col-12">
                 <div class="form-floating mb-3">
                   <input type="date" class="form-control" id="floatingInput" placeholder="name@example.com">
                   <label for="floatingInput">Tanggal Selesai</label>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-6 col-12">
                 <div class="form-floating mb-3">
                   <input type="number" class="form-control" id="jumlahPeserta">
                   <label for="jumlahPeserta">Jumlah Peserta Kompetisi</label>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-6 col-12">
                 <div class="form-floating">
                   <input type="number" class="form-control" id="jumlahNegara">
                   <label for="jumlahNegara">Jumlah Negara/Provinsi yang Ikut Serta</label>
@@ -121,7 +121,7 @@
           <div class="mb-4">
             <h5 class="mb-3">Informasi Partisipasi</h5>
             <div class="row">
-              <div class="col-6">
+              <div class="col-sm-6 col-12">
                 <div class="form-floating mb-3">
                   <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
                     <option selected>Pilih salah satu</option>
@@ -132,7 +132,7 @@
                   <label for="floatingSelect">Capaian Kompetisi</label>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-sm-6 col-12">
                 <div class="form-floating mb-3">
                   <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
                     <option selected>Pilih salah satu</option>
