--- a/pages/tambah-ajuan.html
+++ b/pages/tambah-ajuan.html
@@ -22,13 +22,13 @@
             <label for="floatingSelect">Sumber Dana</label>
           </div>
           <div class="row">
-            <div class="col-6">
+            <div class="col-sm-6 col-12">
               <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Nama Kegiatan</label>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-sm-6 col-12">
               <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Nama Tim</label>
@@ -59,13 +59,13 @@
             <label for="floatingSelect">Pengajuan Dana</label>
           </div>
           <div class="row">
-            <div class="col-6">
+            <div class="col-sm-6 col-12">
               <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Nama Bank</label>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-sm-6 col-12">
               <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Nomor Rekening</label>
