--- a/pages/detail-portofolio-kegiatan-ditolak.html
+++ b/pages/detail-portofolio-kegiatan-ditolak.html
@@ -6,9 +6,9 @@
     <h4>Informasi Kegiatan</h4>
   </div>
   <div class="bg-white">
-    <div class="bg-danger bg-opacity-25 border border-danger rounded-2 px-4 py-3 fw-semibold text-danger">
-      <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-      <span>Catatan Verifikator: Portofolio ini seharusnya diajukan pada bagian Kompetisi</span>
+    <div class="bg-danger bg-opacity-25 border border-danger rounded-2 px-4 py-3 fw-semibold text-dark">
+      <i class="bi bi-exclamation-diamond-fill"></i>
+      <span class="ms-2">Catatan Verifikator: Portofolio ini seharusnya diajukan pada bagian Kompetisi</span>
     </div>
   </div>
 </div>
@@ -22,9 +22,9 @@
               <h4>Kompetisi UI Design</h4>
               <p class="fw-semibold">Diajukan tanggal: 20 Mei 2023</p>
             </div>
-            <button class="btn btn-outline-primary px-4 py-2 fw-bold border border-2 border-primary rounded-2">
+            <button class="btn btn-outline-primary px-3 px-sm-4 py-2 fw-bold border border-2 border-primary rounded-2">
               <i class="bi bi-pencil-square"></i>
-              Edit
+              <span class="d-none d-sm-inline">Edit</span>
             </button>
           </div>
           <span class="bg-danger text-danger bg-opacity-10 px-3 fw-semibold rounded-1 border border-danger">
@@ -89,11 +89,11 @@
               <span class="fw-semibold">Foto Kegiatan</span>
             </div>
             <div class="row">
-              <div class="col-4">
+              <div class="col-sm-4 col-12">
                 <div class="d-flex justify-content-between align-items-center border border-light py-2 px-3 rounded-4">
-                  <img src="assets/png.png" alt="Icon Item" width="auto" height="50">
-                  <div class="d-flex flex-column">
-                    <span class="fw-semibold">Foto Kompetisi UI De..</span>
+                  <img src="assets/png.png" alt="Icon Item" width="auto" height="50" class="me-3">
+                  <div class="d-flex flex-column overflow-hidden">
+                    <small class="fw-semibold single-line-text">Foto Kompetisi UI Design</small>
                     <small>2 mb</small>
                     <small>14 Agustus 2022 06:13</small>
                   </div>
@@ -109,11 +109,11 @@
               <span class="fw-semibold">Sertifikat/Surat Pernyataan Bukti Keikutsertaan Kegiatan</span>
             </div>
             <div class="row">
-              <div class="col-4">
+              <div class="col-sm-4 col-12">
                 <div class="d-flex justify-content-between align-items-center border border-light py-2 px-3 rounded-4">
-                  <img src="assets/pdf.png" alt="Icon Item" width="auto" height="50">
-                  <div class="d-flex flex-column">
-                    <span class="fw-semibold">Sertifikat Peserta UI...</span>
+                  <img src="assets/pdf.png" alt="Icon Item" width="auto" height="50" class="me-3">
+                  <div class="d-flex flex-column overflow-hidden">
+                    <small class="fw-semibold single-line-text">Sertifikat Peserta UI Design</small>
                     <small>2 mb</small>
                     <small>14 Agustus 2022 06:13</small>
                   </div>
