--- a/pages/detail-portofolio-kegiatan-revisi.html
+++ b/pages/detail-portofolio-kegiatan-revisi.html
@@ -7,8 +7,8 @@
   </div>
   <div class="bg-white">
     <div class="bg-warning bg-opacity-25 border border-warning rounded-2 px-4 py-3 fw-semibold">
-      <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-      <span>Catatan Verifikator: Unggah dan Lengkapi berkas sesuai persyaratan yang diminta sebelum mengajukan portofolio</span>
+      <i class="bi bi-exclamation-diamond-fill"></i>
+      <span class="ms-2">Catatan Verifikator: Unggah dan Lengkapi berkas sesuai persyaratan yang diminta sebelum mengajukan portofolio</span>
     </div>
   </div>
 </div>
@@ -22,9 +22,9 @@
               <h4>Intrepreneurship Seminar</h4>
               <p class="fw-semibold">Diajukan tanggal: 20 Mei 2023</p>
             </div>
-            <button class="btn btn-outline-primary px-4 py-2 fw-bold border border-2 border-primary rounded-2">
+            <button class="btn btn-outline-primary px-3 px-sm-4 py-2 fw-bold border border-2 border-primary rounded-2">
               <i class="bi bi-pencil-square"></i>
-              Edit
+              <span class="d-none d-sm-inline">Edit</span>
             </button>
           </div>
           <span class="bg-warning text-warning bg-opacity-10 px-3 fw-semibold rounded-1 border border-warning">
@@ -86,15 +86,15 @@
           <h5>Kelengkapan Berkas</h5>
           <div class="fw-bold text-danger mb-3">Berkas belum lengkap!</div>
           <div class="border border-light p-3 rounded-4 mb-3">
-            <div class="d-flex justify-content-between align-items-center mb-3">
+            <div class="d-flex justify-content-between align-items-start mb-3">
               <span class="fw-semibold">Foto Kegiatan</span>
               <button class="btn btn-outline-primary py-0 fw-bold border border-2 border-primary rounded-3">
                 <i class="bi bi-paperclip"></i>
-                Lampiran Berkas
+                <span class="d-none d-sm-inline">Lampiran Berkas</span>
               </button>
             </div>
             <div class="row">
-              <div class="col-4">
+              <div class="col-sm-4 col-12 mb-3">
                 <div class="d-flex justify-content-between align-items-center border border-light py-2 px-3 rounded-4">
                   <img src="assets/png.png" alt="Icon Item" width="auto" height="50">
                   <div class="d-flex flex-column">
@@ -107,7 +107,7 @@
                   </span>
                 </div>
               </div>
-              <div class="col-4">
+              <div class="col-sm-4 col-12 mb-3">
                 <div class="d-flex justify-content-between align-items-center border border-light py-2 px-3 rounded-4">
                   <img src="assets/png.png" alt="Icon Item" width="auto" height="50">
                   <div class="d-flex flex-column">
@@ -123,12 +123,12 @@
             </div>
           </div>
           <div class="border border-light p-3 rounded-4 mb-3">
-            <div class="d-flex justify-content-between align-items-center mb-3">
+            <div class="d-flex justify-content-between align-items-start mb-3">
               <span class="fw-semibold">Sertifikat/Surat Pernyataan Bukti Keikutsertaan Kegiatan</span>
               <div class="dropdown">
                 <button class="dropdown-toggle btn btn-outline-primary py-0 fw-bold border border-2 border-primary rounded-3" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="bi bi-paperclip"></i>
-                  Lampiran Berkas
+                  <span class="d-none d-sm-inline">Lampiran Berkas</span>
                 </button>
                 <ul class="dropdown-menu">
                   <li><button class="dropdown-item">Unggah Berkas</button></li>
@@ -153,7 +153,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="berkasModal" tabindex="-1" aria-labelledby="berkasModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="berkasModalLabel">Pilih dari Berkas Saya</h1>
