--- a/pages/informasi-skim.html
+++ b/pages/informasi-skim.html
@@ -46,7 +46,7 @@
               <p class="text-info fw-semibold">Catatan selama kegiatan wirausaha dilakukan</p>
             </div>
           </div>
-          <div class="position-relative" style="margin-bottom: 6.5rem; margin-top: 6.5rem;" >
+          <div class="position-relative d-none d-sm-block" style="margin-bottom: 6.5rem; margin-top: 6.5rem;" >
             <div class="progress" role="progressbar" aria-label="Progress" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="height: 2px;">
               <div class="progress-bar" style="width: 40%"></div>
             </div>
