--- a/pages/portofolio-kegiatan.html
+++ b/pages/portofolio-kegiatan.html
@@ -9,18 +9,18 @@
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-start mb-3">
             <div class="d-flex align-items-center justify-content-start flex-wrap">
-              <button data-status="Semua" class="filter-btn btn btn-outline-primary fw-semibold rounded-pill py-1 me-2 fs"><small>Semua</small><span class="ms-1">15</span></button>
-              <button data-status="Belum Diajukan" class="filter-btn btn btn-outline-secondary fw-semibold rounded-pill py-1 me-2 fs"><small>Belum Diajukan</small><span class="ms-1">1</span></button>
-              <button data-status="Menunggu Verifikasi" class="filter-btn btn btn-outline-info fw-semibold rounded-pill py-1 me-2 fs"><small>Menunggu Verifikasi</small><span class="ms-1">3</span></button>
-              <button data-status="Revisi" class="filter-btn btn btn-outline-warning fw-semibold rounded-pill py-1 me-2 fs"><small>Revisi</small><span class="ms-1">1</span></button>
-              <button data-status="Disetujui" class="filter-btn btn btn-outline-success fw-semibold rounded-pill py-1 me-2 fs"><small>Disetujui</small><span class="ms-1">8</span></button>
-              <button data-status="Ditolak" class="filter-btn btn btn-outline-danger fw-semibold rounded-pill py-1 me-2 fs"><small>Ditolak</small><span class="ms-1">2</span></button>
+              <button data-status="Semua" class="filter-btn btn btn-outline-primary fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2 fs"><small>Semua</small><span class="ms-1">15</span></button>
+              <button data-status="Belum Diajukan" class="filter-btn btn btn-outline-secondary fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2 fs"><small>Belum Diajukan</small><span class="ms-1">1</span></button>
+              <button data-status="Menunggu Verifikasi" class="filter-btn btn btn-outline-info fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2 fs"><small>Menunggu Verifikasi</small><span class="ms-1">3</span></button>
+              <button data-status="Revisi" class="filter-btn btn btn-outline-warning fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2 fs"><small>Revisi</small><span class="ms-1">1</span></button>
+              <button data-status="Disetujui" class="filter-btn btn btn-outline-success fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2 fs"><small>Disetujui</small><span class="ms-1">8</span></button>
+              <button data-status="Ditolak" class="filter-btn btn btn-outline-danger fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2 fs"><small>Ditolak</small><span class="ms-1">2</span></button>
             </div>
-            <a href="javascript:void(0)" class="w-auto btn btn-primary rounded-3"><i class="bi bi-plus-lg"></i> Tambah Ajuan</a>
+            <a href="javascript:void(0)" class="w-auto btn btn-primary rounded-3"><i class="bi bi-plus-lg"></i> <span class="d-none d-sm-inline">Tambah Ajuan</span></a>
           </div>
           <div class="row">
             {{#each portofolioKegiatan}}
-            <div data-status="{{status}}" class="item col-4 mb-3">
+            <div data-status="{{status}}" class="item col-sm-4 col-12 mb-0 mb-sm-3">
               <div class="card shadow rounded-3">
                 <div class="d-flex py-3 px-4">
                   <img src="assets/item.png" alt="Icon Item" width="50" height="50" class="me-3">
