--- a/pages/portofolio-kompetisi.html
+++ b/pages/portofolio-kompetisi.html
@@ -9,14 +9,14 @@
         <div class="card-body">
           <div class="d-flex justify-content-between align-items-start mb-3">
             <div class="d-flex align-items-center justify-content-start flex-wrap">
-              <button data-status="Semua" class="filter-btn btn btn-outline-primary fw-semibold rounded-pill py-1 me-2 fs"><small>Semua</small></button>
-              <button data-status="Belum Diajukan" class="filter-btn btn btn-outline-secondary fw-semibold rounded-pill py-1 me-2 fs"><small>Belum Diajukan</small></button>
-              <button data-status="Menunggu Verifikasi" class="filter-btn btn btn-outline-info fw-semibold rounded-pill py-1 me-2 fs"><small>Menunggu Verifikasi</small></button>
-              <button data-status="Revisi" class="filter-btn btn btn-outline-warning fw-semibold rounded-pill py-1 me-2 fs"><small>Revisi</small></button>
-              <button data-status="Disetujui" class="filter-btn btn btn-outline-success fw-semibold rounded-pill py-1 me-2 fs"><small>Disetujui</small><span class="ms-1">1</span></button>
-              <button data-status="Ditolak" class="filter-btn btn btn-outline-danger fw-semibold rounded-pill py-1 me-2 fs"><small>Ditolak</small></button>
+              <button data-status="Semua" class="filter-btn btn btn-outline-primary fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2"><small>Semua</small></button>
+              <button data-status="Belum Diajukan" class="filter-btn btn btn-outline-secondary fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2"><small>Belum Diajukan</small></button>
+              <button data-status="Menunggu Verifikasi" class="filter-btn btn btn-outline-info fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2"><small>Menunggu Verifikasi</small></button>
+              <button data-status="Revisi" class="filter-btn btn btn-outline-warning fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2"><small>Revisi</small></button>
+              <button data-status="Disetujui" class="filter-btn btn btn-outline-success fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2"><small>Disetujui</small><span class="ms-1">1</span></button>
+              <button data-status="Ditolak" class="filter-btn btn btn-outline-danger fw-semibold rounded-pill py-0 py-sm-1 mb-2 me-2"><small>Ditolak</small></button>
             </div>
-            <a href="#tambah-ajuan-kompetisi" class="navBtn w-auto btn btn-primary rounded-3"><i class="bi bi-plus-lg"></i> Tambah Ajuan</a>
+            <a href="#tambah-ajuan-kompetisi" class="navBtn w-auto btn btn-primary rounded-3"><i class="bi bi-plus-lg"></i> <span class="d-none d-sm-inline">Tambah Ajuan</span></a>
           </div>
           <div class="row">
             <!-- {{#each portofolioKegiatan}}
